syntax = "proto3";
package federation;

option go_package = "./api";

service FederatedLearning {
  rpc JoinFederation(JoinRequest) returns (JoinResponse);
  rpc SubmitUpdate(ModelUpdate) returns (Ack);
  rpc GetLatestModel(GetModelRequest) returns (GetModelResponse);
}

message JoinRequest {
  string collaborator_id = 1;
}

message JoinResponse {
  bytes initial_model = 1;
}

message ModelUpdate {
  string collaborator_id = 1;
  bytes model_weights = 2;
}

message Ack {
  bool success = 1;
}

message GetModelRequest {
  string collaborator_id = 1;
}

message GetModelResponse {
  bytes model_weights = 1;
  int32 current_round = 2;
}
